Findbugs - potential problems cleanup #PL-4217